bug 772672 - CreateCompositor can hold up the Gecko thread, waiting for a surface r=ajuma